  * Add assert_* methods for using Webrat's matchers w/o RSpec (Mike Gaffney, Amos King)
  * Added Webrat.configure method for Webrat configuration [#33] (Mike Gaffney)
  * Added select_time, select_date, and select_datetime to API. [#36] (Ben Mabey)
  * Use Hpricot and REXML when not parsing with Nokogiri (on JRuby, for example)

* Minor enhancements

  * Create tmp/pids directory if directory does not exist. (Amos King)
  * Added Selenium grid configuration and support. (Amos King && Cornel Borcean)
  * Support passing an ActiveRecord model to #within when in Rails mode [#68] (Luke Melia)
  * Make assert_* matchers in rails mode increment the assertions count [#123] (Amos King)
  * Added assert_* matchers to selenium matchers [#110] (Amos King)
  * Added assert_contain, assert_not_contain [#86] (Mike Gaffney, Amos King)
  * Add configuration options for the Selenium environment and port (Kieran Pilkington)
  * Maximize the browser window after initializing Selenium (Luke Melia)
  * Better inspect output for Webrat elements
  * Sets the Webrat mode with Configuration#mode= in the config block [#85] (Mike Gaffney)
  * Detect if the document is XML or HTML using the Content-Type when in Rails mode
  * Expose #selenium method for direct access to Selenium client
  * Check nokogiri gem version before requiring nokogiri
  * Include the Selenium server jar file in the gem (Bryan Helmkamp, Ben Schwarz)
  * Added key_down, key_up and fire_event to Selenium session (Fernando Garcia)
  * Fix outputing README during Rails plugin install (Fernando Garcia)
  * Strip newlines when matching label text (Miha Filej)
  * Add simple support for accessing Webrat's matchers from RSpec by requiring
    "webrat/rspec-rails" (David Chelimsky)
  * Support save_and_open_page in Windows and Cygwin (Mike Gaffney)
  * Added RadioField#checked? to indicated whether or not a radio button is checked
    (Luke Melia)
  * Add spec:jruby rake task for running Webrat's spec suite with JRuby