@@ -1,4 +1,4 @@
 require "webrat/selenium/matchers/have_xpath"
 require "webrat/selenium/matchers/have_selector"
-# require "webrat/core/matchers/have_tag"
+require "webrat/selenium/matchers/have_tag"
 require "webrat/selenium/matchers/have_content"
